Got a decent start on a landing page, but I continue to be plagued with margin and spacing issues.

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,4 +1,5 @@
 // Color palette
 $color-primary: #2e2e2e;
 $text-primary: #fff6f2;
-$color-accent: #ffaf4f;
+$text-secondary: $color-primary;
+$color-accent: #ffc300;
